--- a/debian/rules
+++ b/debian/rules
@@ -1,17 +1,18 @@
 #!/usr/bin/make -f
 # -*- makefile -*-
-# Sample debian/rules that uses debhelper.
-# This file was originally written by Joey Hess and Craig Small.
-# As a special exception, when this file is copied by dh-make into a
-# dh-make output file, you may use that output file without restriction.
-# This special exception was added by Craig Small in version 0.37 of dh-make.
 
-# Uncomment this to turn on verbose mode.
-#export DH_VERBOSE=1
+COVERAGE=/usr/bin/env python-coverage
 
-# %:
-# 	dh $@ 
-DEB_PYTHON_SYSTEM=pysupport
-DEB_PYTHON_BUILD_ARGS="test -q"
-include /usr/share/cdbs/1/rules/debhelper.mk
-include /usr/share/cdbs/1/class/python-distutils.mk
+PYTHON2=$(shell pyversions -vr)
+
+configure:
+	/usr/bin/env python setup.py configure
+
+%: configure
+	dh $@ --buildsystem=python_distutils --with=python2
+
+#override_dh_auto_test:
+#	$(COVERAGE) run setup.py test
+#	$(COVERAGE) report pokerengine/*.py
+#	rm .coverage
+
