--- a/pokerstats/test-stats.py.in
+++ b/pokerstats/test-stats.py.in
@@ -1,4 +1,4 @@
-#!@PYTHON@
+#!/usr/bin/env python
 # -*- mode: python -*-
 #
 # Copyright (C) 2008, 2009 Loic Dachary <loic@dachary.org>
@@ -19,8 +19,7 @@
 # "AGPLv3".  If not, see <http://www.gnu.org/licenses/>.
 #
 import sys, os, tempfile, shutil, platform
-sys.path.insert(0, "@srcdir@/..")
-sys.path.insert(0, "..")
+sys.path.insert(0, "@srcdir@")
 
 import libxml2
 
@@ -57,8 +56,8 @@ settings_xml_server = """<?xml version="1.0" encoding="UTF-8"?>
 
   <cashier acquire_timeout="5" pokerlock_queue_timeout="30" user_create="yes" />
   <database name="pokernetworktest" host="localhost" user="pokernetworktest" password="pokernetwork"
-            root_user="@MYSQL_TEST_DBROOT@" root_password="@MYSQL_TEST_DBROOT_PASSWORD@" schema="@srcdir@/../../database/schema.sql" command="@MYSQL@" />
-  <path>.. ../@srcdir@ @POKER_ENGINE_PKGSYSCONFDIR@ @POKER_NETWORK_PKGSYSCONFDIR@</path>
+            root_user="@config.test.mysql.root_user.name@" root_password="@config.test.mysql.root_user.password@" schema="@srcdir@/database/schema.sql" command="@config.test.mysql.command@" />
+  <path>@config.pokerengine.paths.conf@ @config.pokernetwork.paths.conf@</path>
   <users temporary="BOT.*"/>
 </server>
 """
@@ -67,11 +66,11 @@ settings_xml_stats = """<?xml version="1.0" encoding="UTF-8"?>
 <settings ping="15000" verbose="6" delays="true" poll_frequency="0.1" percentiles="5.0">
   <server host="127.0.0.1" port="19480" >
     <database name="pokernetworktest" host="localhost" user="pokernetworktest" password="pokernetwork"
-            root_user="@MYSQL_TEST_DBROOT@" root_password="@MYSQL_TEST_DBROOT_PASSWORD@" schema="@srcdir@/../../database/schema.sql" command="@MYSQL@" />
+            root_user="@config.test.mysql.root_user.name@" root_password="@config.test.mysql.root_user.password@" schema="@srcdir@/database/schema.sql" command="@config.test.mysql.command@" />
   </server>
   <database name="pokernetworktest" host="localhost" user="pokernetworktest" password="pokernetwork"
-            root_user="@MYSQL_TEST_DBROOT@" root_password="@MYSQL_TEST_DBROOT_PASSWORD@" schema="@srcdir@/../../database/schema.sql" command="@MYSQL@" />
-  <path>.. ../@srcdir@ @POKER_ENGINE_PKGSYSCONFDIR@ @POKER_NETWORK_PKGSYSCONFDIR@</path>
+            root_user="@config.test.mysql.root_user.name@" root_password="@config.test.mysql.root_user.password@" schema="@srcdir@/database/schema.sql" command="@config.test.mysql.command@" />
+  <path>@config.pokerengine.paths.conf@ @config.pokernetwork.paths.conf@</path>
 </settings>
 """
 
@@ -79,21 +78,21 @@ settings_xml_stats_no_percentiles = """<?xml version="1.0" encoding="UTF-8"?>
 <settings ping="15000" verbose="6" delays="true" poll_frequency="0.1" >
   <server host="127.0.0.1" port="19480" >
     <database name="pokernetworktest" host="localhost" user="pokernetworktest" password="pokernetwork"
-            root_user="@MYSQL_TEST_DBROOT@" root_password="@MYSQL_TEST_DBROOT_PASSWORD@" schema="@srcdir@/../../database/schema.sql" command="@MYSQL@" />
+            root_user="@config.test.mysql.root_user.name@" root_password="@config.test.mysql.root_user.password@" schema="@srcdir@/database/schema.sql" command="@config.test.mysql.command@" />
   </server>
   <database name="pokernetworktest" host="localhost" user="pokernetworktest" password="pokernetwork"
-            root_user="@MYSQL_TEST_DBROOT@" root_password="@MYSQL_TEST_DBROOT_PASSWORD@" schema="@srcdir@/../../database/schema.sql" command="@MYSQL@" />
-  <path>.. ../@srcdir@ @POKER_ENGINE_PKGSYSCONFDIR@ @POKER_NETWORK_PKGSYSCONFDIR@</path>
+            root_user="@config.test.mysql.root_user.name@" root_password="@config.test.mysql.root_user.password@" schema="@srcdir@/database/schema.sql" command="@config.test.mysql.command@" />
+  <path>@config.pokerengine.paths.conf@ @config.pokernetwork.paths.conf@</path>
 </settings>
 """
 
 class StatsClientBase(unittest.TestCase):
 
     def destroyDb(self, arg = None):
-        if len("@MYSQL_TEST_DBROOT_PASSWORD@") > 0:
-            os.system("@MYSQL@ -u @MYSQL_TEST_DBROOT@ --password='@MYSQL_TEST_DBROOT_PASSWORD@' -e 'DROP DATABASE IF EXISTS pokernetworktest'")
+        if len("@config.test.mysql.root_user.password@") > 0:
+            os.system("@config.test.mysql.command@ -u @config.test.mysql.root_user.name@ --password='@config.test.mysql.root_user.password@' -e 'DROP DATABASE IF EXISTS pokernetworktest'")
         else:
-            os.system("@MYSQL@ -u @MYSQL_TEST_DBROOT@ -e 'DROP DATABASE IF EXISTS pokernetworktest'")
+            os.system("@config.test.mysql.command@ -u @config.test.mysql.root_user.name@ -e 'DROP DATABASE IF EXISTS pokernetworktest'")
 
     # ------------------------------------------------------
     def setUp(self):
@@ -295,7 +294,7 @@ class RealTestCase(PokerStatsTestBase):
 class OptionsTestCase(PokerStatsTestBase):
     def setUp(self):
         PokerStatsTestBase.setUp(self)
-        self.filepath = "@builddir@/poker.stats.test.xml"
+        self.filepath = "@srcdir@/pokerstats/poker.stats.test.xml"
         fp = open(self.filepath, "w")
         fp.write(settings_xml_stats)
         fp.close()
