--- a/conf/poker.server.xml.in
+++ b/conf/poker.server.xml.in
@@ -114,7 +114,16 @@
   <!-- <tourney_select_info settings="/etc/poker/poker.prizes.xml">/usr/share/pyshared/pokernetwork/tourneyselectinfo.py</tourney_select_info> -->
   <cashier acquire_timeout="5" pokerlock_queue_timeout="30" user_create="yes"/>
   <refill serial="1" amount="5000000"/>
-  <database name="@POKER_DATABASE@" host="@POKER_DBHOST@" port="3306" user="@POKER_DBUSER@" password="@POKER_DBUSER_PASSWORD@" root_user="@POKER_DBROOT@" root_password="@POKER_DBROOT_PASSWORD@" schema="@POKER_NETWORK_PKGDATADIR@/schema.sql" command="@MYSQL@"/>
-  <path>@POKER_ENGINE_PKGSYSCONFDIR@ @POKER_NETWORK_PKGSYSCONFDIR@</path>
+  <database
+    name="@config.mysql.database@"
+    host="@config.mysql.host@"
+    port="@config.mysql.host@"
+    user="@config.mysql.user.name@"
+    password="@config.mysql.user.password@"
+    root_user="@config.mysql.root_user.name@"
+    root_password="@config.mysql.root_user.password@"
+    schema="@config.pokernetwork.paths.data@/database/schema.sql"
+    command="@config.mysql.command@" />
+  <path>@config.pokerengine.paths.conf@ @config.pokernetwork.paths.conf@</path>
   <users temporary="BOT.*"/>
 </server>
