--- a/database/pokerdatabaseupgrade.in
+++ b/database/pokerdatabaseupgrade.in
@@ -1,5 +1,5 @@
-#!@PYTHON@ 
-# -*- py-indent-offset: 4; coding: utf-8; mode: python -*-
+#/usr/bin/env python
+# -*- coding: utf-8 -*-
 #
 # Copyright (C) 2004, 2005, 2006 Mekensleep <licensing@mekensleep.com>
 #                                24 rue vieille du temple, 75004 Paris
@@ -23,7 +23,6 @@
 #  Loic Dachary <loic@gnu.org>
 #
 import getopt, sys
-sys.path.insert(0, "@top_srcdir@")
 
 from pokernetwork.pokernetworkconfig import Config
 from pokernetwork.pokerdatabase import PokerDatabase
@@ -39,8 +38,8 @@ def main():
     except getopt.GetoptError:
         usage()
         sys.exit(2)
-    directory = "@POKER_NETWORK_PKGDATADIR@"
-    settings_file = "@POKER_NETWORK_PKGSYSCONFDIR@/poker.server.xml"
+    directory = "@config.pokernetwork.paths.data@"
+    settings_file = "@config.pokernetwork.paths.conf@/poker.server.xml"
     dry_run = False
     for o, a in opts:
         if o in ("-h", "--help"):
