--- a/pokernetwork/pokerbot.in
+++ b/pokernetwork/pokerbot.in
@@ -1,5 +1,5 @@
-#!@PYTHON@ 
-# -*- python -*-
+#/usr/bin/env python
+# -*- coding: utf-8 -*-
 #
 # Copyright (C) 2007, 2008, 2009 Loic Dachary <loic@dachary.org>
 # Copyright (C) 2005, 2006 Mekensleep <licensing@mekensleep.com>
@@ -24,10 +24,10 @@
 #  Loic Dachary <loic@dachary.org>
 #
 import sys
-sys.path.insert(0, "@top_srcdir@")
+sys.path.insert(0, "@srcdir@")
 
 if(sys.argv[-1][-4:] != ".xml"):
-    sys.argv.append("@POKER_NETWORK_PKGSYSCONFDIR@/poker.bot.xml")
+    sys.argv.append("@config.pokernetwork.paths.conf@/poker.bot.xml")
 
 from pokernetwork.pokerbot import run
 run()
