--- a/pokernetwork/pokerserver.in
+++ b/pokernetwork/pokerserver.in
@@ -1,5 +1,5 @@
-#!@PYTHON@ 
-# -*- python -*-
+#/usr/bin/env python
+# -*- coding: utf-8 -*-
 #
 # Copyright (C) 2005, 2006 Mekensleep <licensing@mekensleep.com>
 #                          24 rue vieille du temple, 75004 Paris
@@ -23,10 +23,9 @@
 #  Loic Dachary <loic@dachary.org>
 #
 import sys
-sys.path.insert(0, "@top_srcdir@")
 
 if(sys.argv[-1][-4:] != ".xml"):
-    sys.argv.append("@POKER_NETWORK_PKGSYSCONFDIR@/poker.server.xml")
+    sys.argv.append("@config.pokernetwork.paths.conf@/poker.server.xml")
 
 from pokernetwork.pokerserver import run
 run()
