--- a/pokerstats/poker.stats.xml.in
+++ b/pokerstats/poker.stats.xml.in
@@ -2,9 +2,9 @@
 <settings xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="stats.xsd" ping="10" verbose="0" percentiles="4.0" poker_network_version="2.0.0">
 
   <server host="127.0.0.1" port="19380">
-    <database name="@POKER_DATABASE@" host="@POKER_DBHOST@" port="3306" user="@POKER_DBUSER@" password="@POKER_DBUSER_PASSWORD@"/>
+    <database name="@config.mysql.database@" host="@config.mysql.host@" port="@config.mysql.port@" user="@config.mysql.user.name@" password="@config.mysql.user.password@"/>
   </server>
 
-  <database name="@POKER_DATABASE@" host="@POKER_DBHOST@" port="3306" user="@POKER_DBUSER@" password="@POKER_DBUSER_PASSWORD@"/>
-  <path>@POKER_ENGINE_PKGSYSCONFDIR@ @POKER_NETWORK_PKGSYSCONFDIR@</path> 
+  <database name="@config.mysql.database@" host="@config.mysql.host@" port="@config.mysql.port@" user="@config.mysql.user.name@" password="@config.mysql.user.password@"/>
+  <path>@config.pokerengine.paths.conf@ @config.pokernetwork.paths.conf@</path> 
 </settings>
