--- a/pokerweb/pages/constants.php.ref.in
+++ b/pokerweb/pages/constants.php.ref.in
@@ -10,6 +10,6 @@
 	define('_cst_footer', 'footer_default.php');
 	define('_cst_currency_one_public', 'currency_one.php');
 	define('_cst_currency_one_private', 'currency_one.php');
-	define('_cst_poker_soap_host', 'http://@POKER_SERVER_HOST@:19382/SOAP');
+	define('_cst_poker_soap_host', 'http://@config.pokernetwork.host@:19382/SOAP');
 	define('_cst_avatar_max_size', _cst_avatar_max_size_kb * _cst_kilo_bytes);
 ?>
