--- a/tests/conf/poker.server.xml.in
+++ b/tests/conf/poker.server.xml.in
@@ -45,7 +45,7 @@
           http="19382"
           http_ssl="19383"/>
 
-  <database name="@POKER_DATABASE@" host="@POKER_DBHOST@" user="@POKER_DBUSER@" password="@POKER_DBUSER_PASSWORD@" />
-  <path>@POKER_ENGINE_PKGDATADIR@/conf @POKER_NETWORK_PKGSYSCONFDIR@</path> 
+  <database name="@config.mysql.database@" host="@config.mysql.host@" user="@config.mysql.user.name@" password="@config.mysql.user.password@" />
+  <path>@config.pokerengine.paths.conf@ @config.pokernetwork.paths.conf@</path>
   <users temporary="BOT.*" />
 </server>
