--- a/tests/testcurrency.php.in
+++ b/tests/testcurrency.php.in
@@ -23,15 +23,15 @@
 //  Loic Dachary <loic@dachary.org>
 //
 
-ini_set('include_path', ini_get('include_path') . ":" . "@top_srcdir@/pokerweb/pages");
+ini_set('include_path', ini_get('include_path') . ":" . "@srcdir@/pokerweb/pages");
 
 require_once 'PHPUnit/Framework/TestCase.php';
 
 require_once 'currency.php';
 
 $GLOBALS['currency_db_base'] = 'currencytest';
-$GLOBALS['currency_db_user'] = '@MYSQL_TEST_DBROOT@';
-$GLOBALS['currency_db_password'] = '@MYSQL_TEST_DBROOT_PASSWORD@';
+$GLOBALS['currency_db_user'] = '@config.test.mysql.root_user.name@';
+$GLOBALS['currency_db_password'] = '@config.test.mysql.root_user.password@';
 
 function test_extension_loaded($what) {
   return false;
