--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: poker-network
 Section: python
 Priority: extra
 Maintainer: Andor Goetzendorff <andor@pokermania.de>
-Build-Depends: debhelper, python (>= 2.6.6), mysql-client, python-mysqldb, python-openssl, python-simplejson, python-soappy, python-twisted (>= 10.1), python-poker-engine (>= 1.5.2), apg, rsync, python-poker-reflogging, python-memcache
+Build-Depends: debhelper, python (>= 2.6.6), mysql-client, python-mysqldb, python-openssl, python-simplejson, python-soappy, python-twisted (>= 10.1), python-poker-engine (>= 1.5.2), apg, rsync, python-poker-reflogging, python-memcache, python-poker-distutils
 Standards-Version: 3.8.3
 Homepage: http://github.com/pokermania/poker-network
 
