--- a/setup.cfg
+++ b/setup.cfg
@@ -2,4 +2,4 @@
 command-packages=pokerdistutils
 
 [configure]
-files=database/*.in conf/*.in pokernetwork/*.in tests/*.in
+files=database/*.in conf/*.in pokernetwork/*.in tests/*.in pokerstats/*.in pokerprizes/*.in
