--- a/setup.cfg
+++ b/setup.cfg
@@ -3,3 +3,6 @@ command-packages=pokerdistutils
 
 [configure]
 files=database/*.in conf/*.in pokernetwork/*.in tests/*.in pokerstats/*.in pokerprizes/*.in
+
+[test]
+files=tests/test_*.py
