--- a/debian/rules
+++ b/debian/rules
@@ -13,6 +13,6 @@ build:
 	dh $@ --buildsystem=python_distutils --with=python2
 
 #override_dh_auto_test:
-#	$(COVERAGE) -x setup.py test -f
+#	$(COVERAGE) -x setup.py test
 #	$(COVERAGE) -r pokernetwork/*.py
 #	rm .coverage
