--- a/debian/control
+++ b/debian/control
@@ -1,5 +1,6 @@
 Source: poker-network
 Section: python
+X-Python-Version: >= 2.6.6
 Priority: extra
 Maintainer: Andor Goetzendorff <andor@pokermania.de>
 Build-Depends:
@@ -12,6 +13,7 @@ Build-Depends:
     python-soappy,
     python-twisted (>= 10.1),
     python-poker-engine (>= 1.5.2),
+    python-poker-packets (>= 2.2.0),
     python-poker-distutils (>= 0.1.0-3),
     apg,
     rsync,
@@ -25,14 +27,14 @@ Section: python
 Architecture: all
 Provides: ${python:Provides}
 Suggests: mysql-server
-X-Python-Version: >= 2.6.6
 Depends:
     ${misc:Depends},
     ${python:Depends},
     ucf,
     adduser,
-    python-poker-engine (>= 1.5.2),
     python-twisted (>= 10.1),
+    python-poker-engine (>= 1.5.2),
+    python-poker-packets (>= 2.2.0),
     python-mysqldb,
     python-soappy,
     python-openssl,
@@ -82,7 +84,6 @@ Section: python
 Architecture: all
 Priority: optional
 Provides: ${python:Provides}
-X-Python-Version: >= 2.6.6
 Depends:
     ${misc:Depends},
     ${python:Depends},
@@ -99,7 +100,6 @@ Section: python
 Architecture: all
 Priority: optional
 Provides: ${python:Provides}
-X-Python-Version: >= 2.6.6
 Depends:
     ${misc:Depends},
     ${python:Depends},
