rewrite import statements for all files importing pokerpackets, refs #6639

--- a/pokerprizes/test-prizes.py.in
+++ b/pokerprizes/test-prizes.py.in
@@ -44,7 +44,7 @@ twisted.internet.base.DelayedCall.debug = True
 from pokernetwork import pokerdatabase
 from pokernetwork import pokerservice
 from pokernetwork import pokernetworkconfig
-from pokernetwork.pokerpackets import *
+from pokerpackets.networkpackets import *
 from pokerprizes.prizes import PokerPrizes
 from pokerprizes.tourneyselectinfo import Handle
 
