--- a/conf/poker.server.xml.in
+++ b/conf/poker.server.xml.in
@@ -63,50 +63,50 @@
      out, they all default to 0.
   -->
 
-  <table name="One" variant="holdem" betting_structure="2-4-limit" seats="10" player_timeout="60" currency_serial="1" max_missed_round="2"/>
-  <table name="Two" variant="holdem" betting_structure="10-20-limit" seats="10" player_timeout="60" currency_serial="1"/>
-  <table name="Three" variant="holdem" betting_structure="10-20-pot-limit" seats="10" player_timeout="60" currency_serial="1"/>
-  <table name="Four" variant="holdem" betting_structure="100-200-no-limit" seats="10" player_timeout="60" currency_serial="1"/>
-  <table name="Antigua" variant="holdem" betting_structure="100-200-no-limit" seats="10" player_timeout="60" currency_serial="1"/>
-  <table name="Cairo" variant="holdem" betting_structure="100-200-no-limit" seats="10" player_timeout="60" currency_serial="1"/>
-  <table name="Mont" variant="holdem" betting_structure="100-200-no-limit" seats="10" player_timeout="60" currency_serial="1"/>
-  <table name="Nancy" variant="holdem" betting_structure="100-200-no-limit" seats="10" player_timeout="60" currency_serial="1"/>
-  <table name="Corail" variant="holdem" betting_structure="100-200-no-limit" seats="10" player_timeout="60" currency_serial="1"/>
-  <table name="Legend" variant="holdem" betting_structure="100-200-no-limit" seats="10" player_timeout="60" currency_serial="1"/>
-  <table name="Chip" variant="holdem" betting_structure="100-200-no-limit" seats="10" player_timeout="60" currency_serial="1"/>
-  <table name="Relax" variant="holdem" betting_structure="100-200-no-limit" seats="10" player_timeout="60" currency_serial="1"/>
-  <table name="Speed" variant="holdem" betting_structure="100-200-no-limit" seats="10" player_timeout="60" currency_serial="1"/>
-  <table name="Un" variant="holdem" betting_structure="2-4-limit" seats="10" player_timeout="60" currency_serial="1"/>
-  <table name="Deux" variant="holdem" betting_structure="10-20-limit" seats="10" player_timeout="60" currency_serial="1"/>
-  <table name="Trois" variant="holdem" betting_structure="10-20-pot-limit" seats="10" player_timeout="60" currency_serial="1"/>
-  <table name="Quatre" variant="holdem" betting_structure="100-200-no-limit" seats="10" player_timeout="60" currency_serial="1"/>
+  <table name="One" variant="holdem" betting_structure="1-2_20-200_limit" seats="10" player_timeout="60" currency_serial="1" max_missed_round="2"/>
+  <table name="Two" variant="holdem" betting_structure="5-10_100-1000_limit" seats="10" player_timeout="60" currency_serial="1"/>
+  <table name="Three" variant="holdem" betting_structure="10-20_200-2000_pot-limit" seats="10" player_timeout="60" currency_serial="1"/>
+  <table name="Four" variant="holdem" betting_structure="100-200_2000-20000_no-limit" seats="10" player_timeout="60" currency_serial="1"/>
+  <table name="Antigua" variant="holdem" betting_structure="100-200_2000-20000_no-limit" seats="10" player_timeout="60" currency_serial="1"/>
+  <table name="Cairo" variant="holdem" betting_structure="100-200_2000-20000_no-limit" seats="10" player_timeout="60" currency_serial="1"/>
+  <table name="Mont" variant="holdem" betting_structure="100-200_2000-20000_no-limit" seats="10" player_timeout="60" currency_serial="1"/>
+  <table name="Nancy" variant="holdem" betting_structure="100-200_2000-20000_no-limit" seats="10" player_timeout="60" currency_serial="1"/>
+  <table name="Corail" variant="holdem" betting_structure="100-200_2000-20000_no-limit" seats="10" player_timeout="60" currency_serial="1"/>
+  <table name="Legend" variant="holdem" betting_structure="100-200_2000-20000_no-limit" seats="10" player_timeout="60" currency_serial="1"/>
+  <table name="Chip" variant="holdem" betting_structure="100-200_2000-20000_no-limit" seats="10" player_timeout="60" currency_serial="1"/>
+  <table name="Relax" variant="holdem" betting_structure="100-200_2000-20000_no-limit" seats="10" player_timeout="60" currency_serial="1"/>
+  <table name="Speed" variant="holdem" betting_structure="100-200_2000-20000_no-limit" seats="10" player_timeout="60" currency_serial="1"/>
+  <table name="Un" variant="holdem" betting_structure="1-2_20-200_limit" seats="10" player_timeout="60" currency_serial="1"/>
+  <table name="Deux" variant="holdem" betting_structure="5-10_100-1000_limit" seats="10" player_timeout="60" currency_serial="1"/>
+  <table name="Trois" variant="holdem" betting_structure="10-20_200-2000_pot-limit" seats="10" player_timeout="60" currency_serial="1"/>
+  <table name="Quatre" variant="holdem" betting_structure="100-200_2000-20000_no-limit" seats="10" player_timeout="60" currency_serial="1"/>
 
-  <table name="Five" variant="omaha" betting_structure="2-4-limit" seats="10" player_timeout="60" currency_serial="1"/>
-  <table name="Six" variant="omaha" betting_structure="10-20-limit" seats="10" player_timeout="60" currency_serial="1"/>
-  <table name="Seven" variant="omaha" betting_structure="10-20-pot-limit" seats="10" player_timeout="60" currency_serial="1"/>
-  <table name="Eight" variant="omaha" betting_structure="100-200-no-limit" seats="10" player_timeout="60" currency_serial="1"/>
+  <table name="Five" variant="omaha" betting_structure="1-2_20-200_limit" seats="10" player_timeout="60" currency_serial="1"/>
+  <table name="Six" variant="omaha" betting_structure="5-10_100-1000_limit" seats="10" player_timeout="60" currency_serial="1"/>
+  <table name="Seven" variant="omaha" betting_structure="10-20_200-2000_pot-limit" seats="10" player_timeout="60" currency_serial="1"/>
+  <table name="Eight" variant="omaha" betting_structure="100-200_2000-20000_no-limit" seats="10" player_timeout="60" currency_serial="1"/>
 
-  <table name="Nine" variant="omaha8" betting_structure="2-4-limit" seats="10" player_timeout="60" currency_serial="1"/>
-  <table name="Ten" variant="omaha8" betting_structure="10-20-limit" seats="10" player_timeout="60" currency_serial="1"/>
-  <table name="Eleven" variant="omaha8" betting_structure="10-20-pot-limit" seats="10" player_timeout="60" currency_serial="1"/>
-  <table name="Twelve" variant="omaha8" betting_structure="100-200-no-limit" seats="10" player_timeout="60" currency_serial="1"/>
+  <table name="Nine" variant="omaha8" betting_structure="1-2_20-200_limit" seats="10" player_timeout="60" currency_serial="1"/>
+  <table name="Ten" variant="omaha8" betting_structure="5-10_100-1000_limit" seats="10" player_timeout="60" currency_serial="1"/>
+  <table name="Eleven" variant="omaha8" betting_structure="10-20_200-2000_pot-limit" seats="10" player_timeout="60" currency_serial="1"/>
+  <table name="Twelve" variant="omaha8" betting_structure="100-200_2000-20000_no-limit" seats="10" player_timeout="60" currency_serial="1"/>
 
-  <table name="Thirty" variant="7stud" betting_structure="ante-10-20-limit" seats="8" player_timeout="60" currency_serial="1"/>
-  <table name="Fourty" variant="7stud" betting_structure="ante-5-10-limit" seats="8" player_timeout="60" currency_serial="1"/>
+  <table name="Thirty" variant="7stud" betting_structure="ante-5-10_100-1000_limit" seats="8" player_timeout="60" currency_serial="1"/>
+  <table name="Fourty" variant="7stud" betting_structure="ante-2.50-5_50-500_limit" seats="8" player_timeout="60" currency_serial="1"/>
 
-  <table name="Lyearnys" variant="holdem" betting_structure=".02-.04-no-limit" seats="10" player_timeout="60" currency_serial="1"/>
-  <table name="Ingwskel" variant="holdem" betting_structure=".05-.10-no-limit" seats="10" player_timeout="60" currency_serial="1"/>
-  <table name="Cerrt" variant="holdem" betting_structure=".10-.25-no-limit" seats="10" player_timeout="60" currency_serial="1"/>
-  <table name="Therrd" variant="holdem" betting_structure=".25-.50-no-limit" seats="10" player_timeout="60" currency_serial="1"/>
-  <table name="Issgar" variant="holdem" betting_structure=".50-1-no-limit" seats="10" player_timeout="60" currency_serial="1"/>
-  <table name="Torray" variant="holdem" betting_structure="1-2-no-limit" seats="10" player_timeout="60" currency_serial="1"/>
-  <table name="Uskeluina" variant="holdem" betting_structure="2-4-no-limit" seats="10" player_timeout="60" currency_serial="1"/>
-  <table name="Oilde" variant="holdem" betting_structure="3-6-no-limit" seats="10" player_timeout="60" currency_serial="1"/>
-  <table name="Cheper" variant="holdem" betting_structure="5-10-no-limit" seats="10" player_timeout="60" currency_serial="1"/>
-  <table name="Syfar" variant="holdem" betting_structure="10-20-no-limit" seats="10" player_timeout="60" currency_serial="1"/>
-  <table name="Rhoine" variant="holdem" betting_structure="30-60-no-limit" seats="10" player_timeout="60" currency_serial="1"/>
-  <table name="Mosolor" variant="holdem" betting_structure="50-100-no-limit" seats="10" player_timeout="60" currency_serial="1"/>
-  <table name="Cayrryns" variant="holdem" betting_structure="100-200-no-limit" seats="10" player_timeout="60" currency_serial="1"/>
+  <table name="Lyearnys" variant="holdem" betting_structure=".02-.04_.40-4_no-limit" seats="10" player_timeout="60" currency_serial="1"/>
+  <table name="Ingwskel" variant="holdem" betting_structure=".05-.10_1-10_no-limit" seats="10" player_timeout="60" currency_serial="1"/>
+  <table name="Cerrt" variant="holdem" betting_structure=".12-.25_2.50-25_no-limit" seats="10" player_timeout="60" currency_serial="1"/>
+  <table name="Therrd" variant="holdem" betting_structure=".25-.50_5-50_no-limit" seats="10" player_timeout="60" currency_serial="1"/>
+  <table name="Issgar" variant="holdem" betting_structure=".50-1_10-100_no-limit" seats="10" player_timeout="60" currency_serial="1"/>
+  <table name="Torray" variant="holdem" betting_structure="1-2_20-200_no-limit" seats="10" player_timeout="60" currency_serial="1"/>
+  <table name="Uskeluina" variant="holdem" betting_structure="2-4_40-400_no-limit" seats="10" player_timeout="60" currency_serial="1"/>
+  <table name="Oilde" variant="holdem" betting_structure="3-6_60-600_no-limit" seats="10" player_timeout="60" currency_serial="1"/>
+  <table name="Cheper" variant="holdem" betting_structure="5-10_100-1000_no-limit" seats="10" player_timeout="60" currency_serial="1"/>
+  <table name="Syfar" variant="holdem" betting_structure="10-20_200-2000_no-limit" seats="10" player_timeout="60" currency_serial="1"/>
+  <table name="Rhoine" variant="holdem" betting_structure="30-60_600-6000_no-limit" seats="10" player_timeout="60" currency_serial="1"/>
+  <table name="Mosolor" variant="holdem" betting_structure="50-100_1000-10000_no-limit" seats="10" player_timeout="60" currency_serial="1"/>
+  <table name="Cayrryns" variant="holdem" betting_structure="100-200_2000-20000_no-limit" seats="10" player_timeout="60" currency_serial="1"/>
 
   <listen tcp="19380" tcp_ssl="19381" http="19382" http_ssl="19383" rest="19384" rest_ssl="19385"/>
   <!-- <listen ... manhole="%(manhole_port)i" />  -->
