--- a/database/schema.sql.in
+++ b/database/schema.sql.in
@@ -242,7 +242,7 @@ CREATE TABLE tourneys_schedule (
   players_min INT DEFAULT 2 NOT NULL,
   -- Poker variant (holdem, omaha, omaha8, 7stud)
   variant VARCHAR(32) NOT NULL,
-  -- Betting structure (level-001, level-10-15-pot-limit, level-10-20-no-limit, level-15-30-no-limit, level-2-4-limit)
+  -- Betting structure (level-001, level-10-15-pot-limit, level-10-20_200-2000_no-limit, level-15-30-no-limit, level-1-2_20-200_limit)
   betting_structure VARCHAR(32) NOT NULL,
   -- The skin of the tourneys_schedule, used then for the tourney and its tables
   skin VARCHAR(255) NOT NULL DEFAULT 'default',
