--- a/conf/poker.bot.xml.in
+++ b/conf/poker.bot.xml.in
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <settings xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="poker-bot.xsd" delays="false" wait="1" reconnect="yes" watch="no" level="1" cash_in="no" ping="10" no_display_packets="yes" rebuy="yes" name_prefix="BOT" poker_network_version="2.2.0">
 
-  <logging log_level="10">
-    <colorstream log_level="30" output="stdout"/>
-    <stream log_level="10" output="-/tmp/pokerbot.log"/>
+  <logging log_level="20">
+    <colorstream log_level="10" output="stdout"/>
+	<!-- <stream log_level="10" output="-/tmp/python-poker-network.bot.log"/> -->
     <!-- <syslog log_level="30"/> -->
     <!-- <gelf log_level="30" host="localhost"/> -->
   </logging>
