--- a/conf/poker.server.xml.in
+++ b/conf/poker.server.xml.in
@@ -7,9 +7,9 @@
  -->
 <server xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="server.xsd" ping="20" autodeal="yes" max_joined="4000" max_queued_client_packets="500" cleanup="yes" simultaneous="4" max_missed_round="5" chat="yes" memcached="127.0.0.1:11211" session_timeout="60" cookie_timeout="1200" sng_timeout="3600" long_poll_timeout="20" remove_completed="1" admin="false" display_tracebacks="yes" poker_network_version="2.2.0">
 
-  <logging log_level="20">
-    <colorstream log_level="10" output="stdout"/>
-	<!-- <stream log_level="10" output="-/tmp/python-poker-network.server.log"/> -->
+  <logging log_level="10">
+    <colorstream log_level="30" output="stdout"/>
+    <stream log_level="10" output="-/tmp/pokernetwork.log"/>
     <!-- <syslog log_level="30"/> -->
     <!-- <gelf log_level="30" host="localhost"/> -->
   </logging>
