--- a/conf/poker.bot.xml.in
+++ b/conf/poker.bot.xml.in
@@ -1,5 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<settings xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="poker-bot.xsd" delays="false" wait="1" reconnect="yes" reconnect_delay="30,120" watch="no" level="1" cash_in="no" ping="10" no_display_packets="yes" rebuy="yes" name_prefix="BOT" poker_network_version="2.2.0">
+<settings
+  delays="false"
+  wait="1"
+  reconnect="yes"
+  reconnect_delay="30,120"
+  watch="no"
+  level="1"
+  cash_in="no"
+  ping="10"
+  no_display_packets="yes"
+  rebuy="yes"
+  name_prefix="BOT"
+  poker_network_version="@version@">
 
   <logging log_level="10">
     <colorstream log_level="30" output="stdout"/>
@@ -8,13 +20,22 @@
     <!-- <gelf log_level="30" host="localhost"/> -->
   </logging>
 
-  <delays position="0" begin_round="0" end_round="0" end_round_last="0" showdown="5" lag="15"/>
+  <delays
+    position="0"
+    begin_round="0"
+    end_round="0"
+    end_round_last="0"
+    showdown="5"
+    lag="15"/>
+
   <name>test</name>
   <passwd>test</passwd>
   <servers>@config.pokernetwork.host@:@config.pokernetwork.port@</servers>
   <muck>yes</muck>
   <auto_post>yes</auto_post>
+
   <currency id="1">/usr/bin/env wget --quiet -O - 'http://localhost/poker-web/currency_one.php?id=1&amp;command=get_note&amp;value=5000000&amp;count=100&amp;autocommit=yes'</currency>
+
   <path>@config.pokerengine.paths.conf@</path> 
 
   <table name="One">
