--- a/conf/poker.server.xml.in
+++ b/conf/poker.server.xml.in
@@ -1,11 +1,33 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- 
-   session_timeout must be higher than ping
-   cookie_timeout must be greater than session_timeout
+   session_timeout must be at least 6 x session_check
+   session_check must be at lower than ping
+   cookie_timeout must be greater than session_timeou
    if a PHPSESSID is involved (auth module) cookie_timeout must be 
       greater than PHPSESSID timeout
  -->
-<server xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="server.xsd" ping="20" autodeal="yes" max_joined="4000" max_queued_client_packets="500" cleanup="yes" simultaneous="4" max_missed_round="5" chat="yes" memcached="127.0.0.1:11211" session_timeout="60" cookie_timeout="1200" sng_timeout="3600" long_poll_timeout="20" remove_completed="1" admin="false" display_tracebacks="yes" poker_network_version="2.2.0">
+<server
+  ping="20"
+  autodeal="yes"
+  max_joined="4000"
+  max_queued_client_packets="200"
+  simultaneous="4"
+  max_missed_round="5"
+  chat="yes"
+  memcached="127.0.0.1:11211"
+  session_timeout="120"
+  session_check="10"
+  cookie_timeout="1200"
+  sng_timeout="3600"
+  long_poll_timeout="20"
+  remove_completed="1"
+  admin="false"
+  display_tracebacks="yes"
+  poker_network_version="@version@">
+
+<!-- max_queued_client_packets defaults to 500 if you leave it out.
+     max_missed_round defaults to 10 if you leave it out.
+     max_joined defaults to 4000 if you leave it out.  -->
 
   <logging log_level="10">
     <colorstream log_level="30" output="stdout"/>
@@ -13,10 +35,6 @@
     <!-- <syslog log_level="30"/> -->
     <!-- <gelf log_level="30" host="localhost"/> -->
   </logging>
-
-<!-- max_queued_client_packets defaults to 500 if you leave it out.
-     max_missed_round defaults to 10 if you leave it out.
-     max_joined defaults to 4000 if you leave it out.  -->
 
   <language value="en.UTF-8"/>
   <language value="en_US.UTF-8"/>
@@ -56,7 +74,22 @@
      class implemented in pokernetwork/userstats.py. Only one <stats> tag
      is permitted. -->
 
-  <delays autodeal_tournament_min="15" autodeal="18" autodeal_max="120" autodeal_check="15" round="12" position="60" showdown="30" finish="18" messages="60" breaks_check="30" tourney_kick="20" extra_wait_sng_start="30" extra_wait_tourney_start="60" extra_wait_tourney_break="60" extra_wait_tourney_finish="30" />
+  <delays
+    autodeal_tournament_min="15"
+    autodeal="2"
+    autodeal_max="5"
+    autodeal_check="1"
+    round="12"
+    position="60"
+    showdown="30"
+    finish="18"
+    messages="60"
+    breaks_check="30"
+    tourney_kick="20"
+    extra_wait_sng_start="30"
+    extra_wait_tourney_start="60"
+    extra_wait_tourney_break="60"
+    extra_wait_tourney_finish="30"/>
 
 <!-- extra_waits are additional wait times before hands are dealt at
      various points of the tourney (and at the end).  If they are left
@@ -112,17 +145,18 @@
   <!-- <listen ... manhole="%(manhole_port)i" />  -->
   <!-- manhole is useful for debugging, use with telnet admin/admin, 
        however, it can be a security risk and should be used only during debugging -->
-  <!-- <resthost host="localhost" port="19384" path="/POKER_REST" /> -->
+  <resthost host="localhost" port="19384" path="/POKER_REST"/>
 
   <!-- <auth script="pokernetwork.pokerauth"/> -->
 
   <!-- <rest_filter>pokernetwork.nullfilter</rest_filter> -->
-  <!-- <rest_filter>pokernetwowk.sessionproxyfilter/rest_filter> -->
+  <!-- <rest_filter>pokernetwork.sessionproxyfilter</rest_filter> -->
 
   <!-- <tourney_select_info settings="/etc/poker/poker.prizes.xml">pokerprizes.tourneyselectinfo</tourney_select_info> -->
 
   <cashier acquire_timeout="5" pokerlock_queue_timeout="30" user_create="yes"/>
   <refill serial="1" amount="5000000"/>
+
   <database
     name="@config.mysql.database@"
     host="@config.mysql.host@"
@@ -132,7 +166,9 @@
     root_user="@config.mysql.root_user.name@"
     root_password="@config.mysql.root_user.password@"
     schema="@config.pokernetwork.paths.data@/database/schema.sql"
-    command="@config.mysql.command@" />
+    command="@config.mysql.command@"/>
   <path>@config.pokerengine.paths.conf@ @config.pokernetwork.paths.conf@</path>
-  <users temporary="BOT.*"/>
+
+  <users temporary="BOT[0-9]{3}"/>
+
 </server>
