--- a/debian/rules
+++ b/debian/rules
@@ -1,8 +1,6 @@
 #!/usr/bin/make -f
 # -*- makefile -*-
 
-#COVERAGE=/usr/bin/env python-coverage
-
 PYTHON2=$(shell pyversions -vr)
 
 build:
@@ -10,13 +8,10 @@ build:
 	/usr/bin/env python setup.py configure -s "mysql.database=_DBC_DBNAME_"
 	/usr/bin/env python setup.py configure -s "mysql.user.name=_DBC_DBUSER_"
 	/usr/bin/env python setup.py configure -s "mysql.user.password=_DBC_DBPASS_"
-	/usr/bin/env python setup.py configure -b
 	dh $@ --buildsystem=python_distutils --with=python2
 
 %:
 	dh $@ --buildsystem=python_distutils --with=python2
 
 #override_dh_auto_test:
-#	$(COVERAGE) -x setup.py test
-#	$(COVERAGE) -r pokernetwork/*.py
-#	rm .coverage
+#	python setup.py test -p
