--- a/debian/control
+++ b/debian/control
@@ -21,7 +21,7 @@ Depends:
     ucf,
     adduser,
     python-twisted (>= 10.1),
-    python-poker-engine (>= 1.5.2),
+    python-poker-engine (>= 1.5.4-8),
     python-poker-packets (>= 2.2.0),
     python-mysqldb,
     python-soappy,
